kubernetes/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: postgres-tasks
  labels:
    name: my-ingress
spec:
  ingressClassName: traefik  # change to nginx in Kubernetes
  rules:
    - host: nginx.localhost  # change later
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx
              port: 
                number: 80
    - host: grafana.localhost  # change later
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana
              port: 
                number: 3000
